# learningCMake

./: CMakeLists.txt  README.md
hello-world/: CMakeLists.txt  main.cpp
staticlib-example/: CMakeLists.txt  main.cpp
staticlib-example/SomeLibrary/: CMakeLists.txt
staticlib-example/SomeLibrary/include/: SomeClass.h
staticlib-example/SomeLibrary/src/: SomeClass.cpp
